--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -71,7 +71,7 @@ post_class: post-template
                     <h4> {{ site.author }} </h4>
                     <!-- Author Bio -->
                     <p>
-                        Here goes the author description. You might want to place some links too in here
+                        I am a student who dreams of becoming a hacker in the future.
                     </p>
                 </section>
             {% endif %}
