--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
 
 </head>
 <body class="{% if page.post_class %}{{page.post_class}}{% else %}home-template{% endif %}">
-
+    
     {{ content }}
     <footer class="site-footer clearfix">
       <section class="copyright">
@@ -29,7 +29,31 @@
         <a href="http://github.com/rosario/kasper">Kasper theme</a>
       </section>
     </footer>
-    
+    <!--여기부터-->
+
+    {% comment %}---------------------------
+                  SCRIPTS
+    ------------------------{% endcomment %}
+    <!--[if gt IE 8]><!---->
+    {% assign google_fonts = site.google_fonts | default:"Roboto+Slab:700|Noto+Sans:400,400i,700,700i" %}
+    {% capture icons_url %}{% link assets/icomoon/style.css %}{% endcapture %}
+    <script>
+      WebFontConfig = {
+        {% unless site.no_google_fonts %}
+        google: {
+          families: '{{ google_fonts }}'.split('|')
+        },
+        {% endunless %}
+        custom: {
+          families: ['Nanum Gothic', 'icomoon'],
+          urls: ['https://fonts.googleapis.com/earlyaccess/nanumgothic.css', '{{ icons_url | relative_url }}']
+        }
+      };
+    </script>
+    <script async src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+    <!--<![endif]-->
+
+    <!--여기까지-->
     <script type="text/javascript" src="/assets/js/jquery-1.11.1.min.js"></script>
     <script type="text/javascript" src="/assets/js/jquery.fitvids.js"></script>
     <script type="text/javascript" src="/assets/js/index.js"></script>
